2006-08-16  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* data/baobab.glade: Added Escape shortcut for the Stop
	button. Partly fixes bug #351532. Patch by Dave Meikle.

2006-08-15  Paolo Borelli  <pborelli@katamail.com>

	* data/baobab.glade: ctrl+O accel for open folder.

2006-08-08  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/callbacks.c: (open_file_cb):

	Fixed crash when opening a non-existent 
	folder (#350420)

2006-08-07  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c: (show_bars):

	Fixed hidden bug on allocated size

2006-08-07  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-treeview.c: make sure a gmarkup message is 
	escaped.

2006-08-06  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.glade:
	* src/baobab-prefs.c: (props_notify):
	* src/baobab-scan.c: (loopsearch), (searchDir):
	* src/baobab-scan.h:
	* src/baobab-treeview.c: (create_search_model),
	(on_tv_cur_changed), (on_tv_button_press),
	(create_directory_treeview), (create_filesearch_treeview):
	* src/baobab-treeview.h:
	* src/baobab-utils.c: (dir_select), (check_menu_sens), (stop_scan),
	(show_bars), (popupmenu_list), (popupmenu_list_search),
	(begin_search), (search_dialog_response), (dialog_search),
	(save_search_opt), (set_search_opt), (switch_view), (get_NB_page),
	(show_label), (set_label_search):
	* src/baobab-utils.h:
	* src/baobab.c: (start_proc_on_dir), (start_search),
	(prepare_firstcol), (fill_search_model),
	(initialize_search_variables), (filter_adv_search), (baobab_init),
	(baobab_shutdown), (main):
	* src/baobab.h:
	* src/callbacks.c: (on_menuscandir_activate),
	(on_tbscandir_clicked), (on_sort_alfa_activate),
	(on_by_sort_size_activate), (on_tb_search_clicked),
	(on_radio_allfs_clicked), (on_radio_dir_clicked),
	(on_btn_select_search_clicked), (on_search_for_a_file_activate),
	(on_notebook1_switch_page), (trash_file_cb), (list_all_cb),
	(volume_changed), (on_pref_menu), (on_by_type1_activate),
	(on_by_date1_activate):
	* src/callbacks.h:
