@@ -1,3 +1,8 @@
+2006-08-15  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c: load the white pixbuf just once instead
+	of reloading it every time is needed.
+
 2006-08-16  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* data/baobab.glade: Added Escape shortcut for the Stop
